--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "url-join": "^4.0.1"
   },
   "devDependencies": {
+    "@axe-core/puppeteer": "^4.1.0",
     "@nuxtjs/eslint-module": "^3.0.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/svg": "^0.1.12",
@@ -55,6 +56,7 @@
     "fast-xml-parser": "^3.17.4",
     "get-port": "^5.1.1",
     "jest": "^26.6.1",
+    "jest-axe": "^4.1.0",
     "jest-dev-server": "^4.4.0",
     "jest-environment-puppeteer": "^4.4.0",
     "jest-image-snapshot": "^4.2.0",
